[gd_scene load_steps=17 format=3 uid="uid://06w4stx0t306"]

[ext_resource type="Script" path="res://Items/kboom_specials/star.gd" id="1_o338q"]
[ext_resource type="PackedScene" uid="uid://brlwp8kfr2trq" path="res://States/Explosive.tscn" id="2_chrf7"]
[ext_resource type="PackedScene" uid="uid://cjncsqrktcsaa" path="res://States/status_manager.tscn" id="2_m5xjn"]
[ext_resource type="PackedScene" uid="uid://sltxkgybombj" path="res://Stats/speed.tscn" id="4_robo0"]
[ext_resource type="PackedScene" uid="uid://g57ejr7n7epa" path="res://States/parry_area.tscn" id="5_5rhs8"]
[ext_resource type="Texture2D" uid="uid://dmqlt8ehtam1g" path="res://pixel art/bullet.png" id="6_kacpi"]
[ext_resource type="Script" path="res://actors/body.gd" id="6_uqh5w"]
[ext_resource type="PackedScene" uid="uid://dars5mmvvhu6t" path="res://actors/trail.tscn" id="7_vsbt5"]
[ext_resource type="PackedScene" uid="uid://d0kmeaejfcnlo" path="res://shadow.tscn" id="9_uvavv"]
[ext_resource type="Shader" path="res://actors/ghost.gdshader" id="10_5mh8g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktxka"]
size = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mumms"]
size = Vector2(14, 13)

[sub_resource type="Curve" id="Curve_7j61g"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0dv8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b13b"]
size = Vector2(30, 30)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72yhu"]
shader = ExtResource("10_5mh8g")
shader_parameter/shader_color = Color(0, 0, 0, 1)
shader_parameter/alpha = 0.5
shader_parameter/color_swap = null

[node name="Star" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_o338q")
explosive = ExtResource("2_chrf7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ktxka")

[node name="status_manager" parent="." instance=ExtResource("2_m5xjn")]

[node name="speed" parent="." instance=ExtResource("4_robo0")]
speed = 2000.0

[node name="parry_area" parent="." instance=ExtResource("5_5rhs8")]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="parry_area"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_mumms")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, -9.53674e-07)
scale = Vector2(32, 32)
texture = ExtResource("6_kacpi")

[node name="trail" parent="Sprite2D" instance=ExtResource("7_vsbt5")]
position = Vector2(0.9375, 2.98023e-08)
scale = Vector2(0.03125, 0.03125)
width_curve = SubResource("Curve_7j61g")
default_color = Color(1, 1, 0, 1)
lenght = 4

[node name="trail2" parent="Sprite2D" instance=ExtResource("7_vsbt5")]
position = Vector2(2.98023e-08, 0.9375)
scale = Vector2(0.03125, 0.03125)
width_curve = SubResource("Curve_7j61g")
default_color = Color(1, 1, 0, 1)
lenght = 4

[node name="trail3" parent="Sprite2D" instance=ExtResource("7_vsbt5")]
position = Vector2(-0.9375, 2.98023e-08)
scale = Vector2(0.03125, 0.03125)
width_curve = SubResource("Curve_7j61g")
default_color = Color(1, 1, 0, 1)
lenght = 4

[node name="trail4" parent="Sprite2D" instance=ExtResource("7_vsbt5")]
position = Vector2(2.98023e-08, -0.9375)
scale = Vector2(0.03125, 0.03125)
width_curve = SubResource("Curve_7j61g")
default_color = Color(1, 1, 0, 1)
lenght = 4

[node name="body" type="CharacterBody2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_uqh5w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource("RectangleShape2D_y0dv8")

[node name="trail" parent="body" instance=ExtResource("7_vsbt5")]
points = PackedVector2Array(0, 0)
width_curve = SubResource("Curve_7j61g")
default_color = Color(1, 1, 0, 1)

[node name="Area2D" type="Area2D" parent="body" groups=["projectile"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="body/Area2D"]
shape = SubResource("RectangleShape2D_0b13b")

[node name="kill_timer" type="Timer" parent="."]
one_shot = true

[node name="shadow" parent="." instance=ExtResource("9_uvavv")]
scale = Vector2(0.5, 0.5)

[node name="Sprite2D2" type="Sprite2D" parent="shadow"]
material = SubResource("ShaderMaterial_72yhu")
position = Vector2(0, 48)
scale = Vector2(128, 32)
texture = ExtResource("6_kacpi")

[connection signal="area_entered" from="body/Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="body/Area2D" to="." method="_on_area_2d_body_entered"]
